Fixed input appearance for iOS, fixed margins in forms and spacing in buttons

--- a/src/components/FormGroup/FormGroup.module.scss
+++ b/src/components/FormGroup/FormGroup.module.scss
@@ -3,7 +3,7 @@
 
 .form__group {
     &>* {
-        margin-block-end: 0.3rem;
+        margin-block-end: 0.65rem;
     }
 
     &>input,
