--- a/src/components/RecipeSubmission/styles.module.scss
+++ b/src/components/RecipeSubmission/styles.module.scss
@@ -50,7 +50,7 @@
 ============================ */
 .about__fieldset {
   display: flex;
-  gap: 1.5rem 1rem;
+  gap: 1rem;
   position: relative;
 
   @media only screen and (max-width: g.$breakpoint-small) {
